# libv4l2cpp

./: .gitignore  CMakeLists.txt  RunningStats.cpp  RunningStats.h  test.cpp
inc/: V4l2Capture.h  V4l2Device.h  V4l2MmapDevice.h  logger.h
src/: V4l2Capture.cpp  V4l2Device.cpp  V4l2MmapDevice.cpp  logger.cpp
